objects/VisitOps__Presenter_Agenda_Link__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Accepted_for_agenda_session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted for agenda session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Presenter Agenda Links</relationshipLabel>
        <relationshipName>Presenter_Agenda_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invite</fullName>
                </value>
                <value>
                    <fullName>ReInvite</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__AgendaBookedRooms__c</fullName>
        <description>To be used in Session Rooms Change criteria in workflow</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agenda Booked Rooms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Agenda_End_Time__c</fullName>
        <description>This Field Stores value from Agenda Session Record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agenda End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Agenda_Start_Time__c</fullName>
        <description>This Field Stores value from Agenda Session Record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agenda Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Agenda_Title__c</fullName>
        <description>To be used in Session Name Change criteria in workflow</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agenda Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Agenda__c</fullName>
        <label>Agenda</label>
        <referenceTo>VisitOps__Agenda__c</referenceTo>
        <relationshipLabel>Presenter Agenda Links</relationshipLabel>
        <relationshipName>Presenter_Agenda_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Agenda__r.VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Attendee_Name__c</fullName>
        <formula>VisitOps__Attendee__r.VisitOps__Attendee_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>VisitOps__Attendee__c</referenceTo>
        <relationshipLabel>Presenter Agenda Links</relationshipLabel>
        <relationshipName>Presenter_Agenda_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Base_Location_Name__c</fullName>
        <formula>VisitOps__Base_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Base_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Location</label>
        <referenceTo>VisitOps__Location__c</referenceTo>
        <relationshipLabel>Presenter Agenda Links</relationshipLabel>
        <relationshipName>Presenter_Agenda_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Agenda__r.VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__Fowarded_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fowarded Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__InternalId__c</fullName>
        <description>Used internally</description>
        <encryptionScheme>None</encryptionScheme>
        <label>InternalId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Invite_Forwarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invite Forwarded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Invite_Sent_Resent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invite Sent/Resent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Invite_Update_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times the invite is updated/sent to the user</description>
        <label>Invite Update Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__OverrideStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal field used to override Presenter Status</description>
        <label>OverrideStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presenter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>VisitOps__Presenter__c</referenceTo>
        <relationshipLabel>Presenter Agenda Links</relationshipLabel>
        <relationshipName>Presenter_Agenda_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_name_formula__c</fullName>
        <formula>VisitOps__Presenter_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Proposed_End_Date__c</fullName>
        <description>Presenter new proposed end date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposed End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Proposed_Start_Date__c</fullName>
        <description>Presenter new proposed start date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposed Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__ResponseComments__c</fullName>
        <description>This field contains the comments provided by the Presenter while responding to an Email Invite for an Agenda Session.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>New Time Proposed</fullName>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Subscribe_for_24_hrs_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribe for 24 hrs Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Survey_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Title_formula__c</fullName>
        <formula>VisitOps__Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__UserType__c</fullName>
        <formula>IF(NOT(ISBLANK(VisitOps__Presenter__c)),$Label.visitops__presentertype_presenter,IF(NOT(ISBLANK(VisitOps__Attendee__c)),$Label.visitops__presentertype_attendee,IF(NOT(ISBLANK(VisitOps__User__c)),$Label.visitops__presentertype_user,$Label.visitops__presentertype_other)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Presenter_Agenda_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitId__c</fullName>
        <formula>VisitOps__Agenda__r.VisitOps__Visit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VisitId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Arrival_Date_and_Time_User__c</fullName>
        <formula>VisitOps__Agenda__r.VisitOps__Visit__r.VisitOps__ArrivalDateTime__c</formula>
        <label>Visit Arrival Date and Time (User)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Coordinator_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Coordinator Email</label>
        <type>Email</type>
    </fields>
    <label>Presenter Agenda Link</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Presenter_Name__c</columns>
        <columns>VisitOps__Title__c</columns>
        <columns>VisitOps__Base_Location__c</columns>
        <columns>VisitOps__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA{0000}</displayFormat>
        <label>PresenterAgendaLink Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presenter Agenda Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>